修复project目录